<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>navigation_controler</name>
  <version>0.20.2</version>
  <description>Navigation Controler</description>

  <maintainer email="internalprojects.ltts@gmail.com">internalprojects</maintainer>

  <license>Apache License 2.0</license>

  <author email="internalprojects.ltts@gmail.com">internalprojects</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>example_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
